# udpsocket

./: .clang-format  CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt
examples/client/: client.cpp
examples/server/: server.cpp
include/udpsocket/: SockAddr.h  UDPSocket.h  corss.h
scripts/: build.bat
src/: CWinSock.h  SockAddr.cpp  UDPSocket.cpp  cross2.h
